Add DeleteAuthor
