# 1_Object_Oriented/src/Presentation/Alexandria.WebApi/OpenAPI/Alexandria.WebApi.json
@@ -144,6 +144,32 @@
           }
         }
       },
+      "delete": {
+        "tags": [
+          "Authors"
+        ],
+        "summary": "Delete an Author.",
+        "operationId": "DeleteAuthor",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "query",
+            "required": true,
+            "schema": {
+              "type": "integer",
+              "format": "int64"
+            }
+          }
+        ],
+        "responses": {
+          "204": {
+            "description": "No Content"
+          },
+          "404": {
+            "description": "Not Found"
+          }
+        }
+      },
       "post": {
         "tags": [
           "Authors"
